# claude-ime

./: .claude-ime.example.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
npm/: package.json
src/: cli.rs  config.rs  error.rs  main.rs  proxy.rs  pty.rs  signals.rs  terminal.rs  utf8.rs  version.rs
tests/: integration_test.rs
