[package]
name = "claude-ime"
version = "0.2.1"
edition = "2021"
authors = ["Agenon <hello@agenon.ai>"]
description = "Fix IME input for Claude Code — type Vietnamese, Chinese, Japanese, Korean, and more"
license = "MIT"
repository = "https://github.com/agenon/claude-ime"
homepage = "https://github.com/agenon/claude-ime"
readme = "README.md"
keywords = ["claude", "ime", "unicode", "vietnamese", "terminal"]
categories = ["command-line-utilities", "internationalization"]
rust-version = "1.70"

[dependencies]
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "term", "ioctl"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
ctrlc = "3"
which = "7"
thiserror = "2"
dirs = "5"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
